--- a/Lenguaje de marcas/Practica1HTML/Actividad4_KevinRosales.html
+++ b/Lenguaje de marcas/Practica1HTML/Actividad4_KevinRosales.html
@@ -13,6 +13,7 @@
                 <th style="color:blue"> MIERCOLES</th> 
                 <th style="color:blue">JUEVES</th>
                 <th style="color:blue">VIERNES</th>
+                <th><b><i>Horario</i></b></th>
             </tr>
             <tr>
             <td><i><b>08:00-08:55</b></i></td>
@@ -21,6 +22,7 @@
                 <td align="center">FOL</td>
                 <td align="center">ED</td>
                 <td rowspan="3" align="center">BD</td>
+                <td><i><b>08:00-08:55</b></i></td>
             </tr>
              <tr>
             <td><i><b>08:55-09:50</b></i></td>
@@ -28,15 +30,19 @@
                  <td rowspan="2" align="center">PRO</td>
                  <td rowspan="2" align="center">PRO</td>
                  <td align="center">ING</td>
+                 <td><i><b>08:55-09:50</b></i></td>
             </tr>
              <tr>
             <td><i><b>09:50-10:45</b></i></td>
                  <td align="center">ING</td>
                  <td align="center">SIN</td>
+                 <td><i><b>09:50-10:45</b></i></td>
             </tr>
              <tr>
             <td><i><b>10:45-11:15</b></i></td>
                  <td colspan="5" align="center">DESCANSO</td>
+                  <td><i><b>10:45-11:15</b></i></td>
+
             </tr>
              <tr>
             <td><i><b>11:15-12:10</b></i></td>
@@ -45,23 +51,25 @@
                  <td align="center">PRO</td>
                  <td align="center">SIN</td>
                  <td rowspan="3" align="center">PRO</td>
+                 <td><i><b>11:15-12:10</b></i></td>
             </tr>
             <tr>
             <td><i><b>12:10-13:05</b></i></td>
                 <td rowspan="2" align="center">ED</td>
                 <td bgcolor="green" rowspan="2" align="center">LMI</td>
                 <td rowspan="2" align="center">FOL</td>
+                <td><i><b>12:10-13:05</b></i></td>
             </tr>
             <tr>
+            <td><i><b>13:05-14:00</b></i></td>
             <td><i><b>13:05-14:00</b></i></td>
             </tr>
             <tr>
             <td><i><b>14:00-14:55</b></i></td>
                 <td></td>
                 <td align="center">TUTORIA</td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td colspan="3"></td>
+                <td><i><b>14:00-14:55</b></i></td>
             </tr>
             
         </table>
