Acabado Practica 1 HTML

--- a/Lenguaje de marcas/Practica1HTML/Actividad7_KevinRosales.html
+++ b/Lenguaje de marcas/Practica1HTML/Actividad7_KevinRosales.html
@@ -85,6 +85,8 @@
 
     <footer> <!-- Informacion a pie de pagina, normalmente con el Copyright u otra informacion importante.-->
       <p>©Copyright 2050 by nobody. All rights reversed.</p>
+        <p>IES SERPIS. CURSO 2019/2020</p>
+        <p>AUTOR: KEVIN ROSALES 1ºDAM</p>
     </footer>
 
   </body>
