--- a/Lenguaje de marcas/HTML/Practica1HTML/Actividad2_KevinRosales.html
+++ b/Lenguaje de marcas/HTML/Practica1HTML/Actividad2_KevinRosales.html
@@ -11,7 +11,7 @@
         el texto donde nosotros queremos-->
         <table width="100%" border="0">
             <tr><td>
-        <p align="center"> <a href="https://www.recetasdeescandalo.com/croquetas-jamon-caseras-la-receta-mas-sabrosa/"> <img src="Actividad2.1.jpg"></a></p><p align="center"> Imagen1.1</p>
+        <p align="center"> <a href="https://www.recetasdeescandalo.com/croquetas-jamon-caseras-la-receta-mas-sabrosa/" target="_blank"> <img src="Actividad2.1.jpg"></a></p><p align="center"> Imagen1.1</p>
         <br> <!-- con <a></a> Ponemos el enlace en la imagen -->
         <br>
         <br>
