--- a/Lenguaje de marcas/Pagina Web/Index.html
+++ b/Lenguaje de marcas/Pagina Web/Index.html
@@ -10,19 +10,18 @@
 <!-- PARA EL ICONO IR A LA PAGINA https://www.favicon-generator.org/ -->
   <body>
        <nav> <!-- navegador --> 
-           <div clas="hector">
-        <a class="index" href="Index.html">HOME</a>
-        <a href="pag1.html">PAG1</a>
-        <a href="pag2.html">PAG2</a>
-        <a href="pag3.html">PAG3</a>
-           </div>
-     </nav>
+           <ul>
+                <li>  <a href="Index.html">HOME</a></li> 
+                <li>  <a href="pag1.html">PAG1</a></li> 
+                <li>  <a href="pag2.html">PAG2</a></li> 
+                <li>  <a href="pag3.html">PAG3</a></li> 
+            </ul>
+        </nav>
       <!-- Con el ID, en el documento CSS cambiamos los estilos-->
-      <p id="prueba"> HOLAAA
-      <br>
-      adsadad</p>
+      <p id="prueba">NOMBRE EMPRESA </p>
 
     <header>
+       		<img id="logo" src="img/logo_prueba.png"  alt="Logo empresa" />
     </header>
 
     <main>
