--- a/Lenguaje de marcas/Pagina Web/Index.html
+++ b/Lenguaje de marcas/Pagina Web/Index.html
@@ -19,9 +19,16 @@
 
     <header>
             <img class="Chuches1" src="img/Chuches.jpg">
-            <img class="logo" src="img/logo.jpg" />
             <img class="Chuches2" src="img/Chuches.jpg">
-
+            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="Chuches2" src="img/Chuches.jpg">
+            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="logo" src="img/logo.jpg">
+            <img class="Chuches2" src="img/Chuches.jpg">
+            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="Chuches2" src="img/Chuches.jpg">
+            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="Chuches2" src="img/Chuches.jpg">
     </header>
 
     <main>
