--- a/Lenguaje de marcas/Pagina Web/Index.html
+++ b/Lenguaje de marcas/Pagina Web/Index.html
@@ -11,8 +11,8 @@
        <nav> <!-- NAVEGADOR --> 
            <ul>
                 <b><li>  <a class="activo"href="Index.html">Principal</a></li> 
-                <li>  <a href="pag1.html">Donde estamos</a></li> 
-                <li>  <a href="pag2.html">Producto/s</a></li> 
+                <li>  <a href="pag1.html">Producto/s</a></li> 
+                <li>  <a href="pag2.html">Donde estamos</a></li> 
                 <li>  <a href="pag3.html">Trabaja con nosotros</a></li> </b>
             </ul>
         </nav>
@@ -21,11 +21,7 @@
             <img class="Chuches1" src="img/Chuches.jpg">
             <img class="Chuches2" src="img/Chuches.jpg">
             <img class="Chuches1" src="img/Chuches.jpg">
-            <img class="Chuches2" src="img/Chuches.jpg">
-            <img class="Chuches1" src="img/Chuches.jpg">
-            <img class="logo" src="img/logo.jpg">
-            <img class="Chuches2" src="img/Chuches.jpg">
-            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="logo" src="img/Logo.jpg">
             <img class="Chuches2" src="img/Chuches.jpg">
             <img class="Chuches1" src="img/Chuches.jpg">
             <img class="Chuches2" src="img/Chuches.jpg">
@@ -34,7 +30,7 @@
     <main>
     
         <section>
-            <article class="IMAGEN">
+            <article>
                 <h1>
                     ALÉGRATE EL DÍA
                 </h1>
@@ -61,13 +57,14 @@
       <!-- PIE DE PAGINA -->
     <footer>
         <ul>
-          <li>Contacto</li>
-          <li>Terminos y condiciones</li>
-          <li>Politica de privacidad</li>
-          <li>©Copyright 2019. Todos los derechos reservados. Chucherias S.L.</li>
+            <li>Contacto</li>
+            <li>Terminos y condiciones</li>
+            <li>Politica de privacidad</li>
+            <li>©Copyright 2019. Todos los derechos reservados. </li>
+            <li>Chucherias S.L.</li>
         </ul>
         
-        <img src="img/logo.jpg" />
+        <img src="img/Logo.jpg" />
     </footer>
 
   </body>
