--- a/Lenguaje de marcas/Pagina Web/pag3.html
+++ b/Lenguaje de marcas/Pagina Web/pag3.html
@@ -13,8 +13,8 @@
            <ul>
                 <b>
                 <li>  <a href="Index.html">Principal</a></li> 
-                <li>  <a href="pag1.html">Donde estamos</a></li> 
-                <li>  <a href="pag2.html">Producto/s</a></li> 
+                <li>  <a href="pag1.html">Producto/s</a></li> 
+                <li>  <a href="pag2.html">Donde estamos</a></li> 
                 <li>  <a class="activo" href="pag3.html">Trabaja con nosotros</a></li> 
                </b>
             </ul>
@@ -22,7 +22,11 @@
 
     <header>
             <img class="Chuches1" src="img/Chuches.jpg">
-            <img class="logo" src="img/logo.jpg" />
+            <img class="Chuches2" src="img/Chuches.jpg">
+            <img class="Chuches1" src="img/Chuches.jpg">
+            <img class="logo" src="img/Logo.jpg">
+            <img class="Chuches2" src="img/Chuches.jpg">
+            <img class="Chuches1" src="img/Chuches.jpg">
             <img class="Chuches2" src="img/Chuches.jpg">
 
     </header>
@@ -57,7 +61,7 @@ En nombre de la empresa tratamos la información que nos facilita con el fin de 
           <li>©Copyright 2019. Todos los derechos reservados. Chucherias S.L.</li>
         </ul>
         
-        <img src="img/logo.jpg" />
+        <img src="img/Logo.jpg" />
     </footer>
 
   </body>
