--- a/Lenguaje de marcas/Pagina Web/Index.html
+++ b/Lenguaje de marcas/Pagina Web/Index.html
@@ -34,23 +34,27 @@
                 <h1>
                     ALÉGRATE EL DÍA
                 </h1>
-                <p class="intro">
-                Bienvenidos al mundo más dulce, la vida más dulce. En Chucherias S.L. somos confiteros desde 1963 y creamos golosinas adaptadas a vuestros gustos: caramelos, regalices, marshmallows… Advertimos que surfeando en nuestra web te puede apetecer mucho saborear una de nuestras golosinas. No te cortes y visita nuestra tienda online.
-                </p>
+                    <p class="intro">
+                     Bienvenidos al mundo más dulce, la vida más dulce. En Chucherias S.L. somos confiteros desde 1963 y creamos golosinas adaptadas a vuestros gustos: caramelos, regalices, marshmallows… Advertimos que surfeando en nuestra web te puede apetecer mucho saborear una de nuestras golosinas. No te cortes y visita nuestra tienda online.
+                    </p>
+                    <iframe width="891" height="501" src="https://www.youtube.com/embed/SA6VPo5dDB8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+            </article>
+            <article class="video">
                 <img class="foto" src="img/Muchas-chuches.jpg"> 
                 <img class="foto" src="img/Muchas-chuches2.jpg">
-            </article>
+                </article>
         </section>
     
     </main>
        
        <aside> <!-- ENLACES OTRAS PAGINAS-->
             <p>PUBLICIDAD</p>
-                <a href="https://www.vidal.es/terminos-y-condiciones" target="_blank"><img src="img/logo-vidal.png"> </a>
+                <a href="https://www.vidal.es/" target="_blank"><img src="img/logo-vidal.png"> </a>
                 <a href=" https://chupachups.es/" target="_blank"><img src="img/Chupa-chups_logo.png"> </a>
                 <a href="https://www.haribo.com/enGB/home.html" target="_blank"><img src="img/logo-haribo.png"> </a>
                 <a href="https://bollycao.es/" target="_blank"><img src="img/logo-bollycao.png"> </a>
-            <p>PUBLICIDAD</p>
+            <p class="publi">PUBLICIDAD</p>
 
       </aside>
 
