--- a/Lenguaje de marcas/Pagina Web/pag1.html
+++ b/Lenguaje de marcas/Pagina Web/pag1.html
@@ -45,7 +45,7 @@
                 <a href=" https://chupachups.es/" target="_blank"><img src="img/Chupa-chups_logo.png"> </a>
                 <a href="https://www.haribo.com/enGB/home.html" target="_blank"><img src="img/logo-haribo.png"> </a>
                 <a href="https://bollycao.es/" target="_blank"><img src="img/logo-bollycao.png"> </a>
-            <p>PUBLICIDAD</p>
+            <p class="publi">PUBLICIDAD</p>
 
       </aside>
 
