--- a/Lenguaje de marcas/Pagina Web/pag3.html
+++ b/Lenguaje de marcas/Pagina Web/pag3.html
@@ -90,14 +90,12 @@
                     <th colspan="2"><p class="curriculum"><label>Adjunta tu curriculum vitae.</label><input type="file"></p></th>
                  </tr>
                  
-                 <th colspan="2"><p class="formulario"><input type="checkbox"><label>Acepto la política de privacidad.</label><br>
-                    <input type="submit" value="Enviar"></p></th>
-                </form>
-               <tr>
-                <th colspan="3"><p class="clausula">
+                 <th colspan="2"><p class="formulario"><input type="checkbox"><label>Acepto la política de privacidad.</label>
+                    <input type="submit" value="Enviar"></p>
+                 <p class="clausula">
                     Cláusula de Reglamento General de Protección de Datos. RGPD.
                     En nombre de la empresa tratamos la información que nos facilita con el fin de prestarles el servicio solicitado, realizar la facturación del mismo. Los datos proporcionados se conservarán mientras se mantenga la         relación comercial o durante los años necesarios para cumplir con las obligaciones legales. Los datos no se cederán a terceros salvo en los casos en que exista una obligación legal. Usted tiene derecho a obtener    confirmación sobre si en Vidal Golosinas estamos tratando sus datos personales por tanto tiene derecho a acceder a sus datos personales, rectificar los datos inexactos o solicitar su supresión cuando los datos ya no    sean necesarios.</p></th>
-                </tr> 
+                </form>
             </table>
         </section>
          
