--- a/Lenguaje de marcas/Pagina Web/Index.html
+++ b/Lenguaje de marcas/Pagina Web/Index.html
@@ -1,3 +1,5 @@
+<!-- Navegador de preferencia Firefox -->
+
 <!DOCTYPE html>
 <html>
 
@@ -17,7 +19,7 @@
             </ul>
         </nav>
 
-    <header>
+    <header> <!-- Imagenes y logo-->
             <img class="Chuches1" src="img/Chuches.jpg">
             <img class="Chuches2" src="img/Chuches.jpg">
             <img class="Chuches1" src="img/Chuches.jpg">
@@ -30,7 +32,7 @@
     <main>
     
         <section>
-            <article>
+            <article><!-- Pagina principal. Texto explicando la pagina-->
                 <h1>
                     ALÉGRATE EL DÍA
                 </h1>
@@ -39,8 +41,8 @@
                     </p>
                     <iframe width="891" height="501" src="https://www.youtube.com/embed/SA6VPo5dDB8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-            </article>
-            <article class="video">
+            </article> <!-- Video presentacion-->
+            <article> <!-- Imagenes de muestra de lo que hace la empresa -->
                 <img class="foto" src="img/Muchas-chuches.jpg"> 
                 <img class="foto" src="img/Muchas-chuches2.jpg">
                 </article>
