--- a/Lenguaje de marcas/JavaScript/PaginaWeb/pag3.html
+++ b/Lenguaje de marcas/JavaScript/PaginaWeb/pag3.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" type="text/css" href="estilos.css">
     <title>CHUCHERIAS S.L.</title>
       
+    <script src="Ejercicio6JS_KevinRosales.js"></script>
+
   </head>
     
   <body>
