--- a/Lenguaje de marcas/JavaScript/PaginaWeb/pag1.html
+++ b/Lenguaje de marcas/JavaScript/PaginaWeb/pag1.html
@@ -11,7 +11,7 @@
        <nav> <!-- NAVEGADOR --> 
            <ul>
                 <b>
-                <li>  <a href="Index.html">Principal</a></li> 
+                <li>  <a href="Index_sin_popup.html">Principal</a></li> 
                 <li>  <a class="activo"href="pag1.html">Producto/s</a></li> 
                 <li>  <a href="pag2.html">Donde estamos</a></li> 
                 <li>  <a href="pag3.html">Trabaja con nosotros</a></li> 
