--- a/Lenguaje de marcas/JavaScript/Calculadora/index.html
+++ b/Lenguaje de marcas/JavaScript/Calculadora/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Calculadora</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 </head>
 <body>
 <div class="calculadora">
@@ -12,7 +12,7 @@
 	</div>
 	<div class="teclas">
 		<div class="numeros">
-			<div>
+			<div> <!-- TABLA PARA MOSTAR LOS NUMEROS Y LAS OPERACIONES EN BOTONES-->
 		        <button id="num7">7</button>
 		        <button id="num8">8</button>
 		        <button id="num9">9</button>
@@ -39,10 +39,10 @@
 		    <button id="mult">x</button>
 	    </div>
 	</div>
-	<div class="sr">
+	<div class="igual">
 		<button id="igual">=</button>
 	</div>
 </div>
-<script src="js/script.js"></script>
+<script src="Ejercicio7JS_KevinRosales.js"></script>
 </body>
 </html>
